<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/id_calllog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_tab"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/from_call_log"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3" />

    <TextView
        android:id="@+id/id_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_tab"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/from_contact"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3" />

    <TextView
        android:id="@+id/id_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_tab"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/manual"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</LinearLayout>